--- a/xueqiu/xueqiu.ini
+++ b/xueqiu/xueqiu.ini
@@ -6,7 +6,6 @@ module          = xueqiu.wsgi
 # the virtualenv (full path)
 home            = /webapps/xueqiu_predict/env
 
-
 # process-related settings
 # master
 master          = true
@@ -19,3 +18,5 @@ chmod-socket    = 666
 # clear environment on exit
 vacuum          = true
 daemonize       = /webapps/xueqiu_predict/yourproject.log 
+pidfile = /tmp/xueqiu-master.pid
+
