--- a/xueqiu/xueqiu.nginx.conf
+++ b/xueqiu/xueqiu.nginx.conf
@@ -3,7 +3,7 @@ upstream django {
 }
 server {
     listen       80;
-    server_name  localhost;
+    server_name  stock.markwh1te.com;
     location / {
         uwsgi_pass  django;
         include    /webapps/xueqiu_predict/xueqiu/uwsgi_params; # the uwsgi_params file you installed
